[package]
name = "u"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { version = "0.17", features = ["spirv"] }
winit = { version = "0.28", default-features = false, features = ["x11"] }
pollster = "0.3"
log = "0.4"
env_logger = "0.10"
glam = "0.24"
fontdue = "0.7"
guillotiere = "0.6"
shared = { path = "shared" }

[build-dependencies]
spirv-builder = "0.9"
